--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <h1>🐍 Snake Game</h1>
 <canvas id="game" width="400" height="400"></canvas>
 
-<script src="script.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
